# Lavan

./: Cargo.toml  README.md
src/: lib.rs
src/data/: prelude.rs  traits.rs
src/data/adapters/: effect.rs  option.rs  pure.rs  result.rs  sure.rs  unit.rs
src/parser/: prelude.rs  traits.rs  util.rs
src/parser/adapters/: and.rs  attach.rs  conversion.rs  flat_map.rs  ignore.rs  map.rs  map_err.rs  non_terminal.rs  opt.rs  or.rs  repeat.rs  try_map.rs
src/stream/: adapters.rs  traits.rs
